complete import and export word file